Historia clinica en paciente

--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,12 @@
             <artifactId>javafx-fxml</artifactId>
             <version>20</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.24</version>
+        </dependency>
     </dependencies>
+
 </project>
